<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="theme">Тёмная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="terms">Пользовательское соглашение</string>
    <string name="back">back</string>
    <string name="developerUrl">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="supportMsg">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="supportSubject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="practicumOfferUrl">https://yandex.ru/legal/practicum_offer/</string>
    <string name="noresults">Ничего не нашлось</string>
    <string name="nointernet">Проблемы со связью\n\nЗагрузка не удалась. Проверьте\nподключение к интернету.</string>
    <string name="refresh">Обновить</string>
    <string name="clearHistory">Очистить историю</string>
    <string name="searchHistory">Вы искали</string>
    <string name="libraryPlayListEmpty">Вы не создали ни одного плейлиста</string>
    <string name="libraryFavoritesEmpty">Ваша медиатека пуста</string>
    <string name="favorites">Избранные треки</string>
    <string name="playlist">Плейлисты</string>
    <string name="internetError">Проверьте подключение к интернету</string>
    <string name="serverError">Ошибка сервера</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>