<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Menu">
    <TextView
        style="@style/TextMenu"
        android:layout_gravity="start"
        android:layout_marginBottom="40dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        tools:ignore="TextSizeCheck" />
    <com.google.android.material.button.MaterialButton
        style="@style/MainButtons"
        android:id="@+id/search"
        android:text="@string/search"
        app:icon="@drawable/search"
        tools:ignore="VisualLintButtonSize" />
    <com.google.android.material.button.MaterialButton
        style="@style/MainButtons"
        android:id="@+id/library"
        android:text="@string/library"
        app:icon="@drawable/library"
        tools:ignore="VisualLintButtonSize" />
    <com.google.android.material.button.MaterialButton
        style="@style/MainButtons"
        android:id="@+id/settings"
        android:text="@string/settings"
        app:icon="@drawable/settings"
        tools:ignore="VisualLintButtonSize" />
</LinearLayout>
