<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/App"
    tools:ignore="ExtraText"
    tools:context="com.my.playlistmaker.presentation.settings.SettingsFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <TextView
            style="@style/TextMenu"
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:text="@string/settings" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/themeSwitcher"
            android:layout_width="match_parent"
            android:layout_height="@dimen/settingsHeight"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/ys_display_regular"
            android:paddingHorizontal="16dp"
            android:text="@string/theme"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/share"
            style="@style/SettingsButton"
            android:text="@string/share"
            app:icon="@drawable/share"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/support"
            style="@style/SettingsButton"
            android:text="@string/support"
            app:icon="@drawable/support"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/terms"
            style="@style/SettingsButton"
            android:layout_height="wrap_content"
            android:text="@string/terms"
            app:icon="@drawable/arrow"
            tools:ignore="VisualLintButtonSize" />
    </LinearLayout>
    >
</LinearLayout>
