<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:ignore="ExtraText">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/backFromSettings"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/back"
            app:icon="@drawable/back"
            app:iconPadding="24dp"
            app:iconTint="@color/black2"/>

        <TextView
            android:layout_width="134dp"
            android:layout_height="26dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="48dp"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="@dimen/textMenu"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />
    </FrameLayout>>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">
        <Switch
            android:paddingHorizontal="16dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/settingsHeight"
            android:text="@string/theme"
            android:textSize="16sp"
            tools:ignore="UseSwitchCompatOrMaterialXml,VisualLintButtonSize" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/settingsHeight"
            android:backgroundTint="@color/white"
            android:gravity=""
            android:text="@string/share"
            android:textColor="@color/black2"
            android:textSize="15sp"
            android:textAllCaps="false"
            app:icon="@drawable/share"
            app:iconTint="@color/grey"
            app:iconGravity="end"
            tools:ignore="VisualLintButtonSize" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/settingsHeight"
            android:backgroundTint="@color/white"
            android:gravity=""
            android:text="@string/support"
            android:textColor="@color/black2"
            android:textSize="15sp"
            android:textAllCaps="false"
            app:icon="@drawable/support"
            app:iconTint="@color/grey"
            app:iconGravity="end"
            tools:ignore="VisualLintButtonSize" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/settingsHeight"
            android:backgroundTint="@color/white"
            android:gravity=""
            android:text="@string/terms"
            android:textColor="@color/black2"
            android:textSize="15sp"
            android:textAllCaps="false"
            app:icon="@drawable/arrow"
            app:iconTint="@color/grey"
            app:iconGravity="end"
            tools:ignore="VisualLintButtonSize" />
    </LinearLayout>>
</LinearLayout>
