<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/App"
    tools:ignore="ExtraText">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            style="@style/BackButtom"
            android:id="@+id/backFromSearch"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/back"
            app:icon="@drawable/back"
            app:iconGravity="start"
            app:iconPadding="24dp"/>
        <TextView
            style="@style/TextMenu"
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="60dp"
            android:text="@string/search"/>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp">
        <EditText
            style="@style/EditTextStyle"
            android:id="@+id/inputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:background="@drawable/edittext_background"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/search"
            android:padding="8dp"
            android:inputType="text"
            android:lines="1"
            android:maxLength="15"
            android:textColor="@color/blackPM"
            android:textSize="18sp"
            android:drawableStart="@drawable/search"
            android:drawablePadding="8dp"
            android:imeOptions="actionDone"
            android:singleLine="true"/>
        <ImageView
            style="@style/EditTextStyle"
            android:id="@+id/clearIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:src="@drawable/clear"
            android:layout_marginEnd="6dp"
            android:visibility="gone"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/trackRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"/>

        <LinearLayout
            android:id="@+id/noresults"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">
            <ImageView
                style="@style/SearchNoResults"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:layout_gravity="center"/>
            <TextView
                style="@style/SearchErrorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/noresults"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/nointernet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">
            <ImageView
                style="@style/SearchNoInternet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:layout_gravity="center"/>
            <TextView
                style="@style/SearchErrorText"
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/nointernet"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/refresh"
                style="@style/SearchRefreshButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:text="@string/refresh"/>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>