<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/App"
    tools:context="com.my.playlistmaker.presentation.search.SearchFragment"
    tools:ignore="ExtraText">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <TextView
            style="@style/TextMenu"
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:text="@string/search" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp">

        <EditText
            android:id="@+id/inputEditText"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:background="@drawable/edittext_background"
            android:cursorVisible="true"
            android:drawableStart="@drawable/search"
            android:drawablePadding="8dp"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:lines="1"
            android:maxLength="15"
            android:padding="8dp"
            android:singleLine="true"
            android:textColor="@color/blackPM"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/clearIcon"
            style="@style/EditTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="6dp"
            android:src="@drawable/clear"
            android:visibility="gone" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/trackRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="gone" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/searchHistory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/TextMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="42dp"
                    android:layout_marginEnd="20dp"
                    android:gravity="center"
                    android:text="@string/searchHistory"
                    android:textSize="19sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/historyRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/clearHistory"
                    style="@style/SearchRefreshButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="24dp"
                    android:text="@string/clearHistory" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:id="@+id/noresults"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                style="@style/SearchNoResults"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="100dp" />

            <TextView
                style="@style/SearchErrorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/noresults" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/nointernet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                style="@style/SearchNoInternet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="100dp" />

            <TextView
                style="@style/SearchErrorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/nointernet" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/refresh"
                style="@style/SearchRefreshButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:text="@string/refresh" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:indeterminateTint="@color/blue"
            android:visibility="gone" />
    </FrameLayout>
</LinearLayout>